--- a/securityexam/src/main/resources/application.yml
+++ b/securityexam/src/main/resources/application.yml
@@ -6,3 +6,16 @@ spring:
     user:
       name: user
       password: user1234
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/Mydatabase
+    username: kang
+    password: kang1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
